refractor: DBconfig / chore: creating table car

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=e-commerce-back
+spring.datasource.url=jdbc:postgresql://localhost:5432/e_car
+spring.datasource.username=${DBuser}
+spring.datasource.password=${DBpassword}
+spring.jpa.hibernate.ddl-auto=update
+
+
