add endpoint test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=e-commerce-back
-spring.datasource.url=jdbc:postgresql://localhost:5432/e_car
+spring.datasource.url=jdbc:postgresql://${HOST}:5432/${DBname}
 spring.datasource.username=${DBuser}
 spring.datasource.password=${DBpassword}
 spring.jpa.hibernate.ddl-auto=update
